# csp-anchor-labels

./: CMakeLists.txt  README.md
gui/: anchor_label.html  anchor_labels_settings.html
gui/js/: anchor_labels_settings.js  csp-anchor-labels.js
src/: AnchorLabel.cpp  AnchorLabel.hpp  Plugin.cpp  Plugin.hpp  logger.cpp  logger.hpp
